# rlmy

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-run.sh  mcp_servers.example.json  pyproject.toml  setup_install.sh
skills/: agentsmd-update.md  review.md
src/rlmy/: __init__.py  cli.py  config.py  wizard.py
src/rlmy/agent/: __init__.py  clipboard.py  commands.py  filesystem.py  main.py  models.py  prompt.py  rlm.py  sandbox.py  trajectory.py  ui.py
src/rlmy/agent/interpreters/: __init__.py  monty.py
src/rlmy/auth/: __init__.py  lm.py  login.py  openai_codex.py  session.py  store.py
src/rlmy/sample_workspace/: AGENTS.md
src/rlmy/sample_workspace/inputs/: input.md
src/rlmy/sample_workspace/skills/: mapreduce-full.md  mapreduce.md
src/rlmy/tools/: __init__.py  edit.py  mcp.py  shell.py  vision.py
tests/: test_auth_lm.py  test_auth_login.py  test_auth_openai_codex.py  test_auth_session.py  test_auth_store.py  test_cli_auth.py  test_deep_imports.py  test_dspy_upgrade_compatibility.py  test_interpreter_factory.py  test_interpreter_quit_parity.py  test_main_wiring.py  test_monty_interpreter.py  test_rlmy_core.py
tests/functional/: __init__.py  test_chatgpt_oauth_flow.py  test_clipboard_workflow.py
